Fixed responsive design issue so that the 50Day Forecast stacks on smaller screen sizes.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,11 +34,15 @@ body {
   }
 
   @media (max-width: 992px) {
-    forecast-div {
+    .forecast-div {
       flex: 1 0 30%; /* This will make the cards take up 45% of the row's width */
     }
     #weather-container .card h2 {
       font-size: 2em;
     }
+    #weather-container, .forecast-div {
+      flex-direction: column;
+    }
+   
   }
 
